[gd_scene load_steps=40 format=3 uid="uid://dd64s133b658p"]

[ext_resource type="Script" path="res://scenes/Play2/play.gd" id="1_hr2qk"]
[ext_resource type="PackedScene" uid="uid://bmqlkb7xfbkax" path="res://scenes/douro.tscn" id="2_b5q6g"]
[ext_resource type="PackedScene" uid="uid://csj83mkgp051p" path="res://player.tscn" id="3_en8lu"]
[ext_resource type="PackedScene" uid="uid://bu4kg657ywafu" path="res://scenes/ki/ki.tscn" id="4_41urv"]
[ext_resource type="PackedScene" uid="uid://yofi1n4wuwr4" path="res://ready.tscn" id="5_b4vn1"]
[ext_resource type="FontFile" uid="uid://cw4i3i5gly5i" path="res://font/mplus-1c-regular.ttf" id="5_gilti"]
[ext_resource type="AudioStream" uid="uid://bfhoxujat01uh" path="res://sounds/play_ambient.mp3" id="6_3ba5q"]
[ext_resource type="AudioStream" uid="uid://p8axr7ia3u5j" path="res://sounds/car_crash.mp3" id="7_e8rwd"]
[ext_resource type="AudioStream" uid="uid://21lrhfs6s4vd" path="res://sounds/finish.mp3" id="8_gschs"]
[ext_resource type="AudioStream" uid="uid://bi1peyvprbcnm" path="res://sounds/open_menu.mp3" id="9_fohvk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y8vas"]
size = Vector2(1504.13, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ds0d"]
size = Vector2(16, 421)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4y5cg"]
size = Vector2(224, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5q6sk"]
size = Vector2(176, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hjhp5"]
size = Vector2(128, 32)

[sub_resource type="LabelSettings" id="LabelSettings_3o2tr"]
font = ExtResource("5_gilti")

[sub_resource type="LabelSettings" id="LabelSettings_ht2qi"]
font = ExtResource("5_gilti")

[sub_resource type="LabelSettings" id="LabelSettings_yviyg"]
font = ExtResource("5_gilti")

[sub_resource type="LabelSettings" id="LabelSettings_4exxr"]
font = ExtResource("5_gilti")

[sub_resource type="LabelSettings" id="LabelSettings_17o58"]
font = ExtResource("5_gilti")
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_bf4au"]
font = ExtResource("5_gilti")
font_size = 11

[sub_resource type="LabelSettings" id="LabelSettings_44ful"]
font = ExtResource("5_gilti")
font_size = 11

[sub_resource type="LabelSettings" id="LabelSettings_gowac"]
font = ExtResource("5_gilti")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_6vof3"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_j3n2l"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_17o1y"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_tui5k"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_w1v15"]
font = ExtResource("5_gilti")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_iy8o3"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_hs2sm"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_lfp7v"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_j71sh"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_7rv1n"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_mg7jc"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_vuik8"]
font = ExtResource("5_gilti")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_5xhbs"]
font = ExtResource("5_gilti")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_1fqbd"]
font = ExtResource("5_gilti")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_wf10b"]
font = ExtResource("5_gilti")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_q6h6t"]
font = ExtResource("5_gilti")
font_size = 14

[node name="Play" type="Node"]
process_mode = 1
script = ExtResource("1_hr2qk")

[node name="Douro" parent="." instance=ExtResource("2_b5q6g")]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("3_en8lu")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
process_callback = 0

[node name="FieldWalls" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="WallTop" type="Area2D" parent="FieldWalls"]
position = Vector2(-561, -266)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallTop"]
position = Vector2(560, 0)
shape = SubResource("RectangleShape2D_y8vas")

[node name="WallBottom" type="Area2D" parent="FieldWalls"]
position = Vector2(-561, 136)
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallBottom"]
position = Vector2(560, 1)
shape = SubResource("RectangleShape2D_y8vas")

[node name="WallLeft" type="Area2D" parent="FieldWalls"]
position = Vector2(-744, -283)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallLeft"]
position = Vector2(0, 218.5)
shape = SubResource("RectangleShape2D_0ds0d")

[node name="WallRight" type="Area2D" parent="FieldWalls"]
position = Vector2(744, -284)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallRight"]
position = Vector2(0, 218.5)
shape = SubResource("RectangleShape2D_0ds0d")

[node name="WallGairoju" type="Area2D" parent="FieldWalls"]
position = Vector2(-560, -144)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallGairoju"]
shape = SubResource("RectangleShape2D_4y5cg")

[node name="WallGairoju2" type="Area2D" parent="FieldWalls"]
position = Vector2(32, -144)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallGairoju2"]
shape = SubResource("RectangleShape2D_4y5cg")

[node name="WallGairoju3" type="Area2D" parent="FieldWalls"]
position = Vector2(250, -144)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallGairoju3"]
position = Vector2(78, 0)
shape = SubResource("RectangleShape2D_5q6sk")

[node name="WallGairoju4" type="Area2D" parent="FieldWalls"]
position = Vector2(-343, -144)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallGairoju4"]
position = Vector2(78, 0)
shape = SubResource("RectangleShape2D_5q6sk")

[node name="WallGairoju5" type="Area2D" parent="FieldWalls"]
position = Vector2(522, -144)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldWalls/WallGairoju5"]
position = Vector2(54, 0)
shape = SubResource("RectangleShape2D_hjhp5")

[node name="Cars" type="Node2D" parent="."]

[node name="CarSummonPos0" type="Marker2D" parent="Cars"]
position = Vector2(-795, 51)
metadata/_edit_lock_ = true

[node name="CarSummonPos2" type="Marker2D" parent="Cars"]
position = Vector2(-795, -84)
metadata/_edit_lock_ = true

[node name="CarSummonPos4" type="Marker2D" parent="Cars"]
position = Vector2(-795, -236)
metadata/_edit_lock_ = true

[node name="CarSummonPos1" type="Marker2D" parent="Cars"]
position = Vector2(800, 111)
metadata/_edit_lock_ = true

[node name="CarSummonPos3" type="Marker2D" parent="Cars"]
position = Vector2(800, -24)
metadata/_edit_lock_ = true

[node name="CarSummonPos5" type="Marker2D" parent="Cars"]
position = Vector2(800, -184)
metadata/_edit_lock_ = true

[node name="CarsSummonTimer" type="Timer" parent="Cars"]

[node name="Josouzais" type="Node2D" parent="."]

[node name="JosouzaiSummonPos00" type="Marker2D" parent="Josouzais"]
position = Vector2(-720, -242)
metadata/_edit_lock_ = true

[node name="JosouzaiSummonPos01" type="Marker2D" parent="Josouzais"]
position = Vector2(711, -177)
metadata/_edit_lock_ = true

[node name="JosouzaiSummonPos10" type="Marker2D" parent="Josouzais"]
position = Vector2(-718, -93)
metadata/_edit_lock_ = true

[node name="JosouzaiSummonPos11" type="Marker2D" parent="Josouzais"]
position = Vector2(713, 112)
metadata/_edit_lock_ = true

[node name="JosouzaiSummonTimer" type="Timer" parent="Josouzais"]

[node name="Gairojus" type="Node2D" parent="."]
z_as_relative = false
y_sort_enabled = true

[node name="Gairoju00" type="Marker2D" parent="Gairojus"]
position = Vector2(-668, -153)
metadata/_edit_lock_ = true

[node name="Gairoju01" type="Marker2D" parent="Gairojus"]
position = Vector2(-460, -134)
metadata/_edit_lock_ = true

[node name="Gairoju10" type="Marker2D" parent="Gairojus"]
position = Vector2(-344, -153)
metadata/_edit_lock_ = true

[node name="Gairoju11" type="Marker2D" parent="Gairojus"]
position = Vector2(-184, -132)
metadata/_edit_lock_ = true

[node name="Gairoju20" type="Marker2D" parent="Gairojus"]
position = Vector2(-73, -155)
metadata/_edit_lock_ = true

[node name="Gairoju21" type="Marker2D" parent="Gairojus"]
position = Vector2(135, -132)
metadata/_edit_lock_ = true

[node name="Gairoju30" type="Marker2D" parent="Gairojus"]
position = Vector2(252, -153)
metadata/_edit_lock_ = true

[node name="Gairoju31" type="Marker2D" parent="Gairojus"]
position = Vector2(404, -132)
metadata/_edit_lock_ = true

[node name="Gairoju40" type="Marker2D" parent="Gairojus"]
position = Vector2(521, -154)
metadata/_edit_lock_ = true

[node name="Gairoju41" type="Marker2D" parent="Gairojus"]
position = Vector2(629, -131)
metadata/_edit_lock_ = true

[node name="Ki" parent="Gairojus" instance=ExtResource("4_41urv")]
position = Vector2(-317, -150)

[node name="PlayerRespawns" type="Node2D" parent="."]

[node name="PlayerRespawnPos0" type="Marker2D" parent="PlayerRespawns"]
position = Vector2(-703, -142)
metadata/_edit_lock_ = true

[node name="PlayerRespawnPos1" type="Marker2D" parent="PlayerRespawns"]
position = Vector2(-399, -143)
metadata/_edit_lock_ = true

[node name="PlayerRespawnPos2" type="Marker2D" parent="PlayerRespawns"]
position = Vector2(-128, -144)
metadata/_edit_lock_ = true

[node name="PlayerRespawnPos3" type="Marker2D" parent="PlayerRespawns"]
position = Vector2(192, -144)
metadata/_edit_lock_ = true

[node name="PlayerRespawnPos4" type="Marker2D" parent="PlayerRespawns"]
position = Vector2(469, -144)
metadata/_edit_lock_ = true

[node name="PlayerRespawnPos5" type="Marker2D" parent="PlayerRespawns"]
position = Vector2(691, -143)
metadata/_edit_lock_ = true

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
offset_left = -873.0
offset_top = -505.0
offset_right = 913.0
offset_bottom = 314.0
color = Color(0, 0, 0, 1)

[node name="Ui" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Ui"]
visible = false
offset_left = -200.0
offset_top = -125.0
offset_right = 244.0
offset_bottom = -69.0
scale = Vector2(0.9, 0.9)
color = Color(0, 0, 0, 0.352941)

[node name="JosouzaiInfo" type="VBoxContainer" parent="Ui/ColorRect"]
layout_mode = 2
offset_left = 222.0
offset_right = 443.0
offset_bottom = 56.0

[node name="JosouzaiUsage" type="HBoxContainer" parent="Ui/ColorRect/JosouzaiInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect/JosouzaiInfo/JosouzaiUsage"]
layout_mode = 2
text = "除草剤残量："
label_settings = SubResource("LabelSettings_3o2tr")

[node name="Josouzai" type="Label" parent="Ui/ColorRect/JosouzaiInfo/JosouzaiUsage"]
layout_mode = 2
label_settings = SubResource("LabelSettings_ht2qi")

[node name="GameInfo" type="VBoxContainer" parent="Ui/ColorRect"]
layout_mode = 0
offset_right = 203.0
offset_bottom = 64.0

[node name="Score" type="HBoxContainer" parent="Ui/ColorRect/GameInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect/GameInfo/Score"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "スコア："
label_settings = SubResource("LabelSettings_yviyg")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Score" type="Label" parent="Ui/ColorRect/GameInfo/Score"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_yviyg")

[node name="Time" type="HBoxContainer" parent="Ui/ColorRect/GameInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect/GameInfo/Time"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "残り時間："
label_settings = SubResource("LabelSettings_yviyg")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Timer" type="Label" parent="Ui/ColorRect/GameInfo/Time"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_yviyg")

[node name="ColorRect2" type="ColorRect" parent="Ui"]
offset_left = -200.0
offset_top = -124.0
offset_right = 200.0
offset_bottom = 123.0
color = Color(0, 0, 0, 0.486275)

[node name="ResultUi" type="VBoxContainer" parent="Ui/ColorRect2"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 247.0

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi"]
layout_mode = 2
text = "結果"
label_settings = SubResource("LabelSettings_4exxr")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/ColorRect2/ResultUi"]
layout_mode = 2

[node name="ResultScore" type="Label" parent="Ui/ColorRect2/ResultUi/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000000"
label_settings = SubResource("LabelSettings_17o58")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "あなたの現在のスコア："
label_settings = SubResource("LabelSettings_bf4au")

[node name="YourCurrentScore" type="Label" parent="Ui/ColorRect2/ResultUi/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "000000"
label_settings = SubResource("LabelSettings_44ful")

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "詳細："
label_settings = SubResource("LabelSettings_gowac")

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "草を枯らした回数："
label_settings = SubResource("LabelSettings_6vof3")

[node name="ResultDetailKusa" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_j3n2l")

[node name="HBoxContainer2" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "木を枯らした回数："
label_settings = SubResource("LabelSettings_6vof3")

[node name="ResultDetailTree" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_j3n2l")

[node name="HBoxContainer3" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ResultDetailCarLabel" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "車に轢かれた回数："
label_settings = SubResource("LabelSettings_17o1y")

[node name="ResultDetailCar" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_tui5k")

[node name="VSeparator" type="VSeparator" parent="Ui/ColorRect2/ResultUi/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "現在の成績："
label_settings = SubResource("LabelSettings_w1v15")

[node name="HBoxContainer" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "草を枯らした回数："
label_settings = SubResource("LabelSettings_iy8o3")

[node name="CurrentKusa" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_hs2sm")

[node name="HBoxContainer2" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3/HBoxContainer2"]
layout_mode = 2
text = "木を枯らした回数："
label_settings = SubResource("LabelSettings_lfp7v")

[node name="CurrentTree" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_j71sh")

[node name="HBoxContainer3" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3"]
layout_mode = 2

[node name="CurrentCarLabel" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "車に轢かれた回数："
label_settings = SubResource("LabelSettings_7rv1n")

[node name="CurrentCar" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer3/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_mg7jc")

[node name="VBoxContainer2" type="VBoxContainer" parent="Ui/ColorRect2/ResultUi/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "店長からの一言："
label_settings = SubResource("LabelSettings_vuik8")

[node name="Hyoka" type="Label" parent="Ui/ColorRect2/ResultUi/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "台風で学校休みってマ？"
label_settings = SubResource("LabelSettings_5xhbs")
autowrap_mode = 1

[node name="Buttons" type="HBoxContainer" parent="Ui/ColorRect2/ResultUi"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="Ui/ColorRect2/ResultUi/Buttons"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "もう一度枯らす"

[node name="SaveScoreButton" type="Button" parent="Ui/ColorRect2/ResultUi/Buttons"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "スコアを保存する"

[node name="BackToTheTitleButton" type="Button" parent="Ui/ColorRect2/ResultUi/Buttons"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "タイトル画面に戻る"

[node name="PauseUi" type="ColorRect" parent="Ui"]
process_mode = 2
visible = false
offset_left = -200.0
offset_top = -123.0
offset_right = 200.0
offset_bottom = 123.0
color = Color(0, 0, 0, 0.352941)

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/PauseUi"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 246.0

[node name="Label" type="Label" parent="Ui/PauseUi/VBoxContainer"]
layout_mode = 2
text = "一時中断中"
label_settings = SubResource("LabelSettings_1fqbd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="VBoxContainer" parent="Ui/PauseUi/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="ContinueButton" type="Button" parent="Ui/PauseUi/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="Label" type="Label" parent="Ui/PauseUi/VBoxContainer/HBoxContainer/ContinueButton"]
layout_mode = 0
offset_right = 98.0
offset_bottom = 29.0
text = "続ける"
label_settings = SubResource("LabelSettings_wf10b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="ColorRect" parent="Ui/PauseUi/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="BackToTheTitleButton" type="Button" parent="Ui/PauseUi/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="Label" type="Label" parent="Ui/PauseUi/VBoxContainer/HBoxContainer/BackToTheTitleButton"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 31.0
text = "タイトルに戻る"
label_settings = SubResource("LabelSettings_q6h6t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ready" parent="." instance=ExtResource("5_b4vn1")]
visible = false
offset_left = -155.0
offset_top = -55.0
offset_right = -155.0
offset_bottom = -55.0

[node name="GameTimer" type="Timer" parent="."]

[node name="AmbientSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_3ba5q")

[node name="CarCrashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_e8rwd")

[node name="FinishSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_gschs")

[node name="OpenMenuSound" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("9_fohvk")

[connection signal="CAR_HIT" from="Player" to="." method="_on_player_car_hit"]
[connection signal="timeout" from="Cars/CarsSummonTimer" to="." method="_on_cars_summon_timer_timeout"]
[connection signal="timeout" from="Josouzais/JosouzaiSummonTimer" to="." method="_on_josouzai_summon_timer_timeout"]
[connection signal="pressed" from="Ui/ColorRect2/ResultUi/Buttons/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="Ui/ColorRect2/ResultUi/Buttons/SaveScoreButton" to="." method="_on_save_score_button_pressed"]
[connection signal="pressed" from="Ui/ColorRect2/ResultUi/Buttons/BackToTheTitleButton" to="." method="_on_back_to_the_title_button_pressed"]
[connection signal="pressed" from="Ui/PauseUi/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Ui/PauseUi/VBoxContainer/HBoxContainer/BackToTheTitleButton" to="." method="_on_back_to_the_title_button_pressed"]
[connection signal="FINISHED" from="Ready" to="." method="_on_ready_finished"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="finished" from="FinishSound" to="." method="_on_finish_sound_finished"]
